--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img class="profile-pic" src="pp.png" alt="Akshat Saxena">
     <h2>Hello.</h2>
     <p class="intro">Hi peeps, my name is Akshat. I am a technophile and a nature enthusiast.
-    I ❤ to volunteer in philanthropic activities. I am an expressionist. I ❤ dogs.</p>
+    I love to volunteer in philanthropic activities. I am an expressionist. I love dogs.</p>
   </div>
   <hr>
   <div class="skills">
