--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   <div class="profile">
     <img class="profile-pic" src="pp.png" alt="Akshat Saxena">
     <h2>Hello.</h2>
-    <p class="intro">Hi peeps, my name is Akshat. I am a technophile and a nature enthusiast.
-    I love to volunteer in philanthropic activities. I am an expressionist. I love dogs.</p>
+    <p class="intro">Hi peeps, my name is Akshat. I am a technophile and a nature enthusiastI love to volunteer in philanthropic activities. I am an expressionist. I love dogs.</p>
   </div>
   <hr>
   <div class="skills">
