--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="profile">
     <img class="profile-pic" src="pp.png" alt="Akshat Saxena">
     <h2>Hello.</h2>
-    <p class="intro">Hi peeps, my name is Akshat. I am a technophile and a nature enthusiastI love to volunteer in philanthropic activities. I am an expressionist. I love dogs.</p>
+    <p class="intro">Hi peeps, my name is Akshat. I am a technophile and a nature enthusiast. I love to volunteer in philanthropic activities. I am an expressionist. I love dogs.</p>
   </div>
   <hr>
   <div class="skills">
@@ -27,12 +27,12 @@
     <div class="skill-one">
       <img class="coding" src="coding.png" alt="programming">
       <h3>Programming</h3>
-      <p>Being a computer science undergraduate, I have worked on different languages and their corresponding IDEs. I have worked on Java, C, Html, CSS, xml.</p>
+      <p>Being a computer science student, I have worked with some languages and their corresponding IDEs. I have worked on Java, C, HTML, CSS.</p>
     </div>
     <div class="skill-two">
       <img class="photography" src="photography.png" alt="photography and Videography">
       <h3>Photography and Videography</h3>
-      <p>I got my dslr while I was in 11th. From then onwards, I started exploring photography and videography and still I keep on learning. I like wildlife photography, street photography, portrait photography and landscape photography. I am a member of the photography club of my college. I have fair experience about event photography and videography as well.</p>
+      <p>I got my DSLR while I was in 11th. From then onwards, I started exploring photography and videography and still I keep on learning. I like wildlife photography, street photography, portrait photography and landscape photography. I am a member of the photography club of my college. I have fair experience about event photography and videography as well.</p>
       <a class="picwork" href="https://www.instagram.com/amateur_photography_by_me/">See my work</a>
     </div>
     <div class="skill-three">
