--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="cover" src="cover.png" alt="">
+      <img class="rainbow" src="rainbow.png" alt="rainbow">
       <h1>I'm Akshat.</h1>
       <h2>a <span class="lol">Web</span> Developer.</h2>
+      <img class="cloud" src="cloud.png" alt="cloud">
     </div>
     <div class="middle-container">
   <div class="profile">
     <img class="profile-pic" src="pp.png" alt="Akshat Saxena">
     <h2>Hello.</h2>
-    <p class="intro">Hi peeps, my name is Akshat. I am a technophile and a nature enthusiast. I love to volunteer in philanthropic activities. I am an expressionist. I love dogs.</p>
+    <p class="intro">Hi peeps, my name is Akshat. I am a technophile and a nature enthusiast.
+    I ❤ to volunteer in philanthropic activities. I am an expressionist. I ❤ dogs.</p>
   </div>
   <hr>
   <div class="skills">
@@ -27,19 +29,19 @@
     <div class="skill-one">
       <img class="coding" src="coding.png" alt="programming">
       <h3>Programming</h3>
-      <p>Being a computer science student, I have worked with some languages and their corresponding IDEs. I have worked on Java, C, HTML, CSS.</p>
+      <p>Being a computer science undergraduate, I have worked on different languages and their corresponding IDEs. I have worked on Java, C, Html, CSS, xml.</p>
     </div>
     <div class="skill-two">
       <img class="photography" src="photography.png" alt="photography and Videography">
       <h3>Photography and Videography</h3>
-      <p>I got my DSLR while I was in 11th. From then onwards, I started exploring photography and videography and still I keep on learning. I like wildlife photography, street photography, portrait photography and landscape photography. I am a member of the photography club of my college. I have fair experience about event photography and videography as well.</p>
+      <p>I got my DSLR while I was in 11th. From then onwards, I started exploring photography and videography and still I keep on learning. I like nature photography, wildlife photography,  portrait photography, street photography and landscape photography. I am a member of the photography club of my college. I have fair experience about event photography and videography as well.</p>
       <a class="picwork" href="https://www.instagram.com/amateur_photography_by_me/">See my work</a>
     </div>
     <div class="skill-three">
       <img class="editing" src="editing.png" alt="Designing and Editing">
       <h3>Editing and Designing</h3>
       <p>I love making logos and designs for personal as well as commercial uses. I have worked on Adobe spark, Lightroom, Photoshop, Snapseed, Canva, picsart, Inshot and many others. I also like making comic strips.</p>
-      <a class="picwork" href="https://www.behance.net/akshatsaxena4">See my work</a>
+      <a class="editingwork" href="https://www.behance.net/akshatsaxena4">See my work</a>
     </div>
   </div>
   <hr>
@@ -49,14 +51,15 @@
     <img class="einstein" src="einstein.png" alt="Albert Einstein">
     <h3>-Albert Einstein</h3>
     <p class="contact-message">Feel free to share your thoughts with me. Mail me your suggestions and collaboration ideas. It would really help me a lot.</p>
-    <a class="btn" href="mailto:akshatsaxena472@gmail.com">CONTACT ME</a>
+    <a class="btn" href="mailto:akshatsaxena472@gmail.com">MESSAGE ME</a>
   </div>
 </div>
 <div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/in/akshat-saxena-ab0780195/">LinkedIn</a>
   <a class="footer-link" href="https://instagram.com/akshat__01/">Instagram</a>
   <a class="footer-link" href="https://twitter.com/akshat__01">Twitter</a>
-  <p class="copyright">© 2020 Akshat Saxena.</p>
+  <p class="copyright">© 2020 Akshat Saxena. All rights reserved.</p>
 </div>
 </body>
 </html>
+
