--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <div class="top-container">
       <img class="rainbow" src="rainbow.png" alt="rainbow">
       <h1>I'm Akshat.</h1>
-      <h2>a <span class="lol">Web</span> Developer.</h2>
+      <h2>a <span class="lol">web</span> developer.</h2>
       <img class="cloud" src="cloud.png" alt="cloud">
     </div>
     <div class="middle-container">
   <div class="profile">
+    <iframe class="dog" src="https://giphy.com/embed/bcKmIWkUMCjVm" width="480" height="349" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/animated-hello-waving-bcKmIWkUMCjVm">via GIPHY</a></p>
     <img class="profile-pic" src="pp.png" alt="Akshat Saxena">
     <h2>Hello.</h2>
     <p class="intro">Hi peeps, my name is Akshat. I am a technophile and a nature enthusiast.
@@ -29,12 +30,12 @@
     <div class="skill-one">
       <img class="coding" src="coding.png" alt="programming">
       <h3>Programming</h3>
-      <p>Being a computer science undergraduate, I have worked on different languages and their corresponding IDEs. I have worked on Java, C, Html, CSS, xml.</p>
+      <p>Being a computer science student, I have worked with different languages and their corresponding IDEs. I have worked with Java, C, C++, HTML, CSS.</p>
     </div>
     <div class="skill-two">
       <img class="photography" src="photography.png" alt="photography and Videography">
       <h3>Photography and Videography</h3>
-      <p>I got my DSLR while I was in 11th. From then onwards, I started exploring photography and videography and still I keep on learning. I like nature photography, wildlife photography,  portrait photography, street photography and landscape photography. I am a member of the photography club of my college. I have fair experience about event photography and videography as well.</p>
+      <p>I got my DSLR while I was in 11th. From then onwards, I started exploring photography and videography and still I keep on learning. I like nature photography, wildlife photography,  portrait photography, street photography and landscape photography. I am a member of the photography club of my college.</p>
       <a class="picwork" href="https://www.instagram.com/amateur_photography_by_me/">See my work</a>
     </div>
     <div class="skill-three">
@@ -51,6 +52,7 @@
     <img class="einstein" src="einstein.png" alt="Albert Einstein">
     <h3>-Albert Einstein</h3>
     <p class="contact-message">Feel free to share your thoughts with me. Mail me your suggestions and collaboration ideas. It would really help me a lot.</p>
+    <iframe class="penguin" src="https://giphy.com/embed/Cmr1OMJ2FN0B2" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/hello-Cmr1OMJ2FN0B2">via GIPHY</a></p>
     <a class="btn" href="mailto:akshatsaxena472@gmail.com">MESSAGE ME</a>
   </div>
 </div>
@@ -62,4 +64,3 @@
 </div>
 </body>
 </html>
-
