--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="middle-container">
   <div class="profile">
-    <iframe class="dog" src="https://giphy.com/embed/bcKmIWkUMCjVm" width="480" height="349" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/animated-hello-waving-bcKmIWkUMCjVm">via GIPHY</a></p>
+    <iframe class="dog" src="https://giphy.com/embed/bcKmIWkUMCjVm" width="240" height="240" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/animated-hello-waving-bcKmIWkUMCjVm">via GIPHY</a></p>
     <img class="profile-pic" src="pp.png" alt="Akshat Saxena">
     <h2>Hello.</h2>
     <p class="intro">Hi peeps, my name is Akshat. I am a technophile and a nature enthusiast.
@@ -35,7 +35,7 @@
     <div class="skill-two">
       <img class="photography" src="photography.png" alt="photography and Videography">
       <h3>Photography and Videography</h3>
-      <p>I got my DSLR while I was in 11th. From then onwards, I started exploring photography and videography and still I keep on learning. I like nature photography, wildlife photography,  portrait photography, street photography and landscape photography. I am a member of the photography club of my college.</p>
+      <p>I got my DSLR while I was in 11th. From then onwards, I started exploring photography and videography and still I keep on learning. I like nature photography, portrait photography, street photography and landscape photography. I am a member of the photography club of my college as well.</p>
       <a class="picwork" href="https://www.instagram.com/amateur_photography_by_me/">See my work</a>
     </div>
     <div class="skill-three">
@@ -52,10 +52,10 @@
     <img class="einstein" src="einstein.png" alt="Albert Einstein">
     <h3>-Albert Einstein</h3>
     <p class="contact-message">Feel free to share your thoughts with me. Mail me your suggestions and collaboration ideas. It would really help me a lot.</p>
-    <iframe class="penguin" src="https://giphy.com/embed/Cmr1OMJ2FN0B2" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/hello-Cmr1OMJ2FN0B2">via GIPHY</a></p>
     <a class="btn" href="mailto:akshatsaxena472@gmail.com">MESSAGE ME</a>
   </div>
 </div>
+<iframe class="penguin" src="https://giphy.com/embed/Cmr1OMJ2FN0B2" width="240" height="240" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/hello-Cmr1OMJ2FN0B2">via GIPHY</a></p>
 <div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/in/akshat-saxena-ab0780195/">LinkedIn</a>
   <a class="footer-link" href="https://instagram.com/akshat__01/">Instagram</a>
