--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
     <div class="skill-one">
       <img class="coding" src="coding.png" alt="programming">
       <h3>Programming</h3>
-      <p>Being a computer science student, I'm familiar with many programming languages and softwares/platforms. I have worked on Java, Javascript and python. I have also worked on Atom, GitHub and Android Studio</p>
+      <p>Being a computer science student, I'm familiar with many programming languages and softwares/platforms. I have worked on Java, Javascript and python. I have also worked on Atom, GitHub and Android Studio.</p>
     </div>
     <div class="skill-two">
       <img class="photography" src="photography.png" alt="photography and Videography">
       <h3>Photography and Videography</h3>
-      <p>I got my DSLR while I was in 11th. From then onwards, I started exploring photography and videography and still I keep on learning. I like nature photography, portrait photography, street photography and landscape photography. I also love making short cinematic clips which you check out in my instagram profile. I am a member of the photography club of my college as well.</p>
+      <p>I got my DSLR while I was in 11th. From then onwards, I started exploring photography and videography and still I keep on learning. I like nature photography, portrait photography, street photography and landscape photography. I also love making short cinematic clips and B-Rolls which you can check out in my instagram profile. I am a member of the photography club of my college as well.</p>
       <a class="picwork" href="https://www.instagram.com/amateur_photography_by_me/">See my work</a>
     </div>
     <div class="skill-three">
       <img class="editing" src="editing.png" alt="Designing and Editing">
       <h3>Editing and Designing</h3>
-      <p>I started graphic designing and editing in my first year of college. Till now, I've worked on various designs and projects for personal as well other uses. I have worked on Adobe Photoshop, After Effects, Lightroom, Spark, Snapseed, and some other softwares too.</p>
+      <p>I started graphic designing and editing in first year of college. Till now, I've worked on various designs and projects for personal as well other uses. I have worked on Adobe Photoshop, After Effects, Lightroom, Spark, Snapseed, and some other softwares too.</p>
       <a class="editingwork" href="https://www.behance.net/akshatsaxena4">See my work</a>
     </div>
   </div>
