--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="skill-two">
       <img class="photography" src="photography.png" alt="photography and Videography">
       <h3>Photography and Videography</h3>
-      <p>I got my DSLR while I was in 11th. From then onwards, I started exploring photography and videography and still I keep on learning. I like nature photography, portrait photography, street photography and landscape photography. I also love making short cinematic clips and B-Rolls which you can check out in my instagram profile. I am a member of the photography club of my college as well.</p>
+      <p>I got my DSLR when I was in 11th. From then onwards, I started exploring photography and videography and still I keep on learning. I like nature photography, portrait photography, street photography and landscape photography. I also love making short cinematic clips and B-Rolls which you can check out in my instagram profile. I am a member of the photography club of my college as well.</p>
       <a class="picwork" href="https://www.instagram.com/amateur_photography_by_me/">See my work</a>
     </div>
     <div class="skill-three">
