--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <div class="profile">
     <iframe class="dog" src="https://giphy.com/embed/bcKmIWkUMCjVm" width="240" height="240" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/animated-hello-waving-bcKmIWkUMCjVm">via GIPHY</a></p>
     <img class="profile-pic" src="pp.png" alt="Akshat Saxena">
-    <h2>Hello.</h2>
-    <p class="intro">Hi peeps, my name is Akshat. I am a technophile and a nature enthusiast.
-    I ❤ to volunteer in philanthropic activities. I am an expressionist. I ❤ dogs.</p>
+    <h2>Hola Amigos,</h2>
+    <p class="intro">An avid and passion-driven person who wants to explore places, build experiences and provide sustainable solutions that could help the mankind.
+    I ❤ to volunteer in philanthropic activities. I have a thing for nature and fitness ⚡. I ❤ dogs.</p>
   </div>
   <hr>
   <div class="skills">
@@ -30,18 +30,18 @@
     <div class="skill-one">
       <img class="coding" src="coding.png" alt="programming">
       <h3>Programming</h3>
-      <p>Being a computer science student, I'm familiar with many programming languages and softwares/platforms. I have worked on Java, Javascript and python. I have also worked on Atom, GitHub and Android Studio. </p>
-    </div>
+      <p>Being a computer science student since the XIth grade, I'm familiar with many programming languages and related tools. I have worked on Java, C, Javascript and python. Tools that I'm familiar with are Atom, GitHub and Android Studio. I have interest in Web Development, front-end development to be precise. I also code on various CP platforms like <span><a href="https://codeforces.com/profile/akshatsaxena123456789">Codeforces</a><span> and <span><a href="https://www.codechef.com/users/akshat_472">Codechef</a><span>. Currently, I am learning React. </p>
+    </div> 
     <div class="skill-two">
       <img class="photography" src="photography.png" alt="photography and Videography">
       <h3>Photography and Videography</h3>
-      <p>I got my DSLR when I was in 11th. From then onwards, I started exploring photography and videography and still I keep on learning. I like nature photography, portrait photography, street photography and landscape photography. I also love making short cinematic clips and B-Rolls which you can check out in my instagram profile. I am a member of the photography club of my college as well.</p>
+      <p>I got a  DSLR after my Xth board exams. From then onwards, I started pursuing my craze for photography and videography. I like nature photography, portrait photography, street photography and landscape photography. I love making short cinematic clips and B-Rolls which you can check out below. I was a member of the photography club of my college as well. I never cease to participate in any photowalks, competitions and photography related workshops.</p>
       <a class="picwork" href="https://www.instagram.com/amateur_photography_by_me/">See my work</a>
     </div>
     <div class="skill-three">
       <img class="editing" src="editing.png" alt="Designing and Editing">
       <h3>Editing and Designing</h3>
-      <p>I started graphic designing and editing in first year of college. Till now, I've worked on various designs and projects for personal as well other uses. I have worked on Adobe Photoshop, After Effects, Lightroom, Spark, Snapseed, and some other softwares too.</p>
+      <p>I started graphic designing and editing during the first year of my college. Till now, I've worked on various designs and projects for personal as well as other uses. I have worked on Adobe Photoshop, After Effects, Lightroom, Spark, Snapseed, and some other editing softwares.</p>
       <a class="editingwork" href="https://www.behance.net/akshatsaxena4">See my work</a>
     </div>
   </div>
