--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="skill-one">
       <img class="coding" src="coding.png" alt="programming">
       <h3>Programming</h3>
-      <p>Being a computer science student since the XIth grade, I'm familiar with many programming languages and related tools. I have worked on Java, C, Javascript and python. Tools that I'm familiar with are Atom, GitHub and Android Studio. I have interest in Web Development, front-end development to be precise. I also code on various CP platforms like <a href="https://codeforces.com/profile/akshatsaxena123456789">Codeforces</a> and <a href="https://www.codechef.com/users/akshat_472">Codechef</a>. Currently, I am learning React. </p>
+      <p>Being a computer science student since the XIth grade, I'm familiar with many programming languages and related tools. I have worked on Java, C, Javascript and python. Tools that I'm familiar with are Atom, GitHub and Android Studio. I have interest in Web Development, front-end development to be precise. I also code on various CP platforms like <a id="codeforces" href="https://codeforces.com/profile/akshatsaxena123456789">Codeforces</a> and <a id="codechef" href="https://www.codechef.com/users/akshat_472">Codechef.</a> Currently, I am learning React.</p>
     </div> 
     <div class="skill-two">
       <img class="photography" src="photography.png" alt="photography and Videography">
