--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <iframe class="dog" src="https://giphy.com/embed/bcKmIWkUMCjVm" width="240" height="240" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/animated-hello-waving-bcKmIWkUMCjVm">via GIPHY</a></p>
     <img class="profile-pic" src="pp.png" alt="Akshat Saxena">
     <h2>Hola Amigos,</h2>
-    <p class="intro">An avid and passion-driven person who wants to explore places, build experiences and provide sustainable solutions that could help the mankind.
-    I ❤ to volunteer in philanthropic activities. I have a thing for nature and fitness ⚡. I ❤ dogs.</p>
+    <p class="intro">An avid and passion-driven person who wants to explore places, build experiences and provide sustainable solutions that could help the mankind.<br>
+    I ❤ to volunteer in philanthropic activities. I have a thing for nature and fitness ⚡.<br> I ❤ dogs.</p>
   </div>
   <hr>
   <div class="skills">
